force-app/main/default/objects/Appointment__c/fields/Appointment_Category__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Category</label>
    <referenceTo>Appointment_Category__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>