force-app/main/default/objects/Appointment__c/fields/Busy_Time__c.field-meta.xml
<CustomField>
    <fullName>Busy_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Busy Time</label>
    <type>Checkbox</type>
</CustomField>