force-app/main/default/objects/Appointment__c/fields/Custom_Recur__c.field-meta.xml
<CustomField>
    <fullName>Custom_Recur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Recurrence</label>
    <type>Checkbox</type>
</CustomField>