force-app/main/default/objects/Appointment__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <type>TextArea</type>
</CustomField>