force-app/main/default/objects/Appointment__c/fields/Resource_Service_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Resource_Service_Alignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource/Service Alignment</label>
    <referenceTo>Resource_Service_Alignment__c</referenceTo>
    <relationshipLabel>Resource/Service</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>