force-app/main/default/objects/Appointment__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <label>Resources</label>
    <type>TextArea</type>
</CustomField>