force-app/main/default/objects/Appointment__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>TextArea</type>
</CustomField>