force-app/main/default/objects/Appointment__c/fields/Total_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants__c</fullName>
    <label>Total Participants</label>
    <summaryForeignKey>Participant__c.Appointment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>